--- a/DataBunch/DataBunch.csproj
+++ b/DataBunch/DataBunch.csproj
@@ -47,8 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="foundation\db\DbConnector.cs" />
+    <Compile Include="foundation\facades\DB.cs" />
+    <Compile Include="foundation\models\Model.cs" />
+    <Compile Include="foundation\processors\query\InsertQueryProcessor.cs" />
     <Compile Include="foundation\utils\ConsoleManager.cs" />
     <Compile Include="foundation\utils\ExceptionHandler.cs" />
+    <Compile Include="foundation\utils\Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ui\forms\Welcome.Designer.cs">
