--- a/DataBunch/DataBunch.csproj
+++ b/DataBunch/DataBunch.csproj
@@ -49,16 +49,18 @@
     <Compile Include="foundation\db\DbConnector.cs" />
     <Compile Include="foundation\db\DbParams.cs" />
     <Compile Include="foundation\db\DbParam.cs" />
+    <Compile Include="foundation\db\facades\DB.cs" />
+    <Compile Include="foundation\db\processors\query\DeleteQueryProcessor.cs" />
+    <Compile Include="foundation\db\processors\query\InsertQueryProcessor.cs" />
+    <Compile Include="foundation\db\processors\query\QueryProcessor.cs" />
+    <Compile Include="foundation\db\processors\query\SearchQueryProcessor.cs" />
+    <Compile Include="foundation\db\processors\query\UpdateQueryProcessor.cs" />
+    <Compile Include="foundation\db\QueryParam.cs" />
     <Compile Include="foundation\exceptions\BaseException.cs" />
     <Compile Include="foundation\exceptions\ItemNotFoundException.cs" />
     <Compile Include="foundation\exceptions\TransformException.cs" />
-    <Compile Include="foundation\facades\DB.cs" />
-    <Compile Include="foundation\processors\query\DeleteQueryProcessor.cs" />
-    <Compile Include="foundation\processors\query\InsertQueryProcessor.cs" />
-    <Compile Include="foundation\processors\query\QueryProcessor.cs" />
-    <Compile Include="foundation\processors\query\SearchQueryProcessor.cs" />
-    <Compile Include="foundation\processors\query\UpdateQueryProcessor.cs" />
     <Compile Include="foundation\repositories\BaseRepository.cs" />
+    <Compile Include="foundation\repositories\FluentQuery.cs" />
     <Compile Include="foundation\transformers\Transformer.cs" />
     <Compile Include="foundation\utils\ConsoleManager.cs" />
     <Compile Include="foundation\utils\ExceptionHandler.cs" />
@@ -100,7 +102,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="foundation\facades\.gitkeep" />
+    <Content Include="foundation\db\facades\.gitkeep" />
     <Content Include="foundation\interfaces\.gitkeep" />
     <Content Include="foundation\models\.gitkeep" />
     <Content Include="foundation\repositories\.gitkeep" />
