--- a/DataBunch/DataBunch.csproj
+++ b/DataBunch/DataBunch.csproj
@@ -72,6 +72,7 @@
     <Compile Include="app\foundation\transformers\Transformer.cs" />
     <Compile Include="app\foundation\utils\ConsoleManager.cs" />
     <Compile Include="app\foundation\utils\ExceptionHandler.cs" />
+    <Compile Include="app\foundation\utils\Hash.cs" />
     <Compile Include="app\foundation\utils\Log.cs" />
     <Compile Include="app\policies\handlers\PolicyHandler.cs" />
     <Compile Include="app\policies\models\Policy.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="app\sessions\models\Session.cs" />
     <Compile Include="app\sessions\policies\SessionPolicy.cs" />
     <Compile Include="app\sessions\repositories\SessionRepository.cs" />
+    <Compile Include="app\sessions\services\Auth.cs" />
     <Compile Include="app\sessions\transformers\SessionTransformer.cs" />
     <Compile Include="app\ui\forms\Welcome.Designer.cs">
       <DependentUpon>WelcomeForm.cs</DependentUpon>
