--- a/DataBunch/DataBunch.csproj
+++ b/DataBunch/DataBunch.csproj
@@ -62,10 +62,12 @@
     <Compile Include="app\foundation\db\processors\query\SearchQueryProcessor.cs" />
     <Compile Include="app\foundation\db\processors\query\UpdateQueryProcessor.cs" />
     <Compile Include="app\foundation\db\QueryParam.cs" />
+    <Compile Include="app\foundation\exceptions\AuthException.cs" />
     <Compile Include="app\foundation\exceptions\BaseException.cs" />
     <Compile Include="app\foundation\exceptions\ItemNotFoundException.cs" />
     <Compile Include="app\foundation\exceptions\TransformException.cs" />
     <Compile Include="app\foundation\exceptions\UnauthorizedException.cs" />
+    <Compile Include="app\foundation\exceptions\ValidationException.cs" />
     <Compile Include="app\foundation\models\Model.cs" />
     <Compile Include="app\foundation\repositories\BaseRepository.cs" />
     <Compile Include="app\foundation\repositories\FluentQuery.cs" />
