--- a/DataBunch/DataBunch.csproj
+++ b/DataBunch/DataBunch.csproj
@@ -122,6 +122,12 @@
     <Compile Include="app\ui\controls\files\FilesControl.Designer.cs">
       <DependentUpon>FilesControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="app\ui\controls\files\FilesDetailsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="app\ui\controls\files\FilesDetailsDialog.Designer.cs">
+      <DependentUpon>FilesDetailsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="app\ui\controls\policies\PoliciesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -161,6 +167,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="app\ui\controls\files\FilesControl.resx">
       <DependentUpon>FilesControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="app\ui\controls\files\FilesDetailsDialog.resx">
+      <DependentUpon>FilesDetailsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="app\ui\controls\policies\PoliciesControl.resx">
       <DependentUpon>PoliciesControl.cs</DependentUpon>
